# tud-ecg-linux

./: README.md
01/: CMakeLists.txt  Makefile
02/: CMakeLists.txt
03/: CMakeLists.txt
03/patches/: 0001-Fix-menu-update.patch  0002-Fix-non-virtual-destructor.patch  0003-Guard-MSVC-specific-pragmas.patch  README.md  request_depth_buffer.diff
04/: CMakeLists.txt
04/patches/: 0001-Fix-missing-include.patch  0002-Guard-MSVC-specific-pragmas.patch  0003-Fix-non-virtual-destructor.patch  0004-Fix-menu-with-newer-glut-version.patch  README.md
05/: CMakeLists.txt
05/patches/: 0001-Guard-some-MSVC-specific-pragmas-in-vec.h.patch  0002-Fix-missing-include.patch  0003-Add-typename-keyword-for-dependent-scopes.patch  0004-Fix-initialization-order.patch  0004-Fix-some-syntax-errors.patch  0005-Fix-initialization-order.patch  0005-Pass-objects-by-const-references.patch  0006-Fix-sequence-point.patch  0006-Pass-objects-by-const-references.patch  0007-Fix-missing-virtual-destructor-in-abstract-classes.patch  0007-Fix-sequence-point.patch  0008-Fix-constructor-initialization-order.patch  0008-Fix-missing-virtual-destructor-in-abstract-classes.patch  0009-Fix-constructor-initialization-order.patch  0009-Silence-narrowing-and-unknown-pragma-warnings.patch  0010-Fix-syntax-error.patch  0010-Silence-narrowing-and-unknown-pragma-warnings.patch  0011-Mark-variable-in-math.h-as-unused.patch
